// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disclosure should render Disclosure 1`] = `
<div>
  <ul
    class="disclosure"
  >
    <li
      class="disclosure__item disclosure--expanded"
    >
      <div
        class="disclosure__label disclosure--section"
      >
        Heading 1
      </div>
      <div
        class="disclosure__content"
      >
        Content 1
      </div>
    </li>
    <li
      class="disclosure__item"
    >
      <div
        class="disclosure__label"
      >
        Heading 2
      </div>
      <div
        class="disclosure__content"
      >
        Content 2
      </div>
    </li>
    <li
      class="disclosure__item"
    >
      <div
        class="disclosure__label disclosure--section"
      >
        Heading 3
      </div>
      <div
        class="disclosure__content"
      >
        Content 3
      </div>
    </li>
  </ul>
</div>
`;

exports[`Disclosure should render Disclosure with custom className values 1`] = `
<div>
  <ul
    class="disclosure custom-class-name"
  >
    <li
      class="disclosure__item custom-class-name disclosure--expanded"
    >
      <div
        class="disclosure__label custom-class-name"
      >
        Heading 1
      </div>
      <div
        class="disclosure__content custom-class-name"
      >
        Content 1
      </div>
    </li>
    <li
      class="disclosure__item custom-class-name"
    >
      <div
        class="disclosure__label custom-class-name disclosure--section"
      >
        Heading 2
      </div>
      <div
        class="disclosure__content custom-class-name"
      >
        Content 2
      </div>
    </li>
    <li
      class="disclosure__item custom-class-name"
    >
      <div
        class="disclosure__label custom-class-name"
      >
        Heading 3
      </div>
      <div
        class="disclosure__content custom-class-name"
      >
        Content 3
      </div>
    </li>
  </ul>
</div>
`;
